--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,16 @@ version = "0.0.1"
 dependencies = ["typer"]
 
 [project.optional-dependencies]
-dev = ["isort", "black", "docformatter"]
+dev = [
+    "isort",
+    "black",
+    "docformatter",
+    "pyright",
+    "flake8",
+    "flake8-pyproject",
+    "autoflake",
+    "bandit",
+]
 
 [tool.isort]
 profile = "black"
@@ -21,3 +30,13 @@ in-place = true
 recursive = true
 black = true
 blank = true
+
+[tool.flake8]
+max-line-length = 88
+max-complexity = 8
+ignore = ["E203", "F401", "E701"]
+
+[tool.autoflake]
+recursive = true
+remove-all-unused-imports = true
+ignore-init-module-imports = true
