add dependencies management section to dev guide

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "todo-cli"
 version = "0.0.1"
-dependencies = ["typer"]
+dependencies = ["typer>=0.12.3,<0.13.0"]
 
 [project.optional-dependencies]
 dev = [
