--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,10 @@ classifiers = [
     "Topic :: Utilities",
 ]
 requires-python = ">=3.9"
-dependencies = ["typer>=0.12.3,<0.13.0"]
+dependencies = [
+    "typer>=0.12.3,<0.13.0",
+    "sqlalchemy>=2.0.30,<3.0.0",
+]
 
 [project.urls]
 Repository = "https://github.com/vladhaidukkk/todo-cli"
