--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ requires-python = ">=3.9"
 dependencies = [
     "typer>=0.12.3,<0.13.0",
     "sqlalchemy>=2.0.30,<3.0.0",
+    "alembic>=1.13.1,<2.0.0",
 ]
 
 [project.urls]
