--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "SQLAlchemy>=2.0.30,<3.0.0",
     "alembic>=1.13.1,<2.0.0",
     "pydantic>=2.7.1,<3.0.0",
-    "pydantic-settings>=2.2.1,<3.0.0"
+    "pydantic-settings>=2.2.1,<3.0.0",
 ]
 
 [project.urls]
