--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,49 +3,49 @@ repos:
     hooks:
       - id: isort
         name: isort
-        entry: isort --check todo
+        entry: isort --check
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: black
         name: black
-        entry: black --check todo
+        entry: black --check
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: docformatter
         name: docformatter
-        entry: docformatter --check todo
+        entry: docformatter --check
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: pyright
         name: pyright
-        entry: pyright todo
+        entry: pyright
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: flake8
         name: flake8
-        entry: flake8 todo
+        entry: flake8
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: autoflake
         name: autoflake
-        entry: autoflake todo
+        entry: autoflake
         language: system
         types: [ python ]
         stages: [ pre-commit ]
 
       - id: bandit
         name: bandit
-        entry: bandit -c pyproject.toml -q -r todo
+        entry: bandit -c pyproject.toml -q
         language: system
         types: [ python ]
         stages: [ pre-commit ]
