--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ Repository = "https://github.com/vladhaidukkk/todo-cli"
 dev = [
     "build",
     "twine",
+    "pytest",
     "isort",
     "black",
     "docformatter",
@@ -83,3 +84,6 @@ ignore = ["E203", "F401", "E701"]
 recursive = true
 remove-all-unused-imports = true
 ignore-init-module-imports = true
+
+[tool.bandit]
+exclude_dirs = ["tests"]
