--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -35,6 +35,8 @@ idna==3.7
     # via requests
 importlib-metadata==7.1.0
     # via twine
+iniconfig==2.0.0
+    # via pytest
 isort==5.13.2
 jaraco-classes==3.4.0
     # via keyring
@@ -70,6 +72,7 @@ packaging==24.0
     # via
     #   black
     #   build
+    #   pytest
 pathspec==0.12.1
     # via black
 pbr==6.0.0
@@ -80,6 +83,8 @@ platformdirs==4.2.2
     # via
     #   black
     #   virtualenv
+pluggy==1.5.0
+    # via pytest
 pre-commit==3.7.1
 pycodestyle==2.11.1
     # via flake8
@@ -99,6 +104,7 @@ pygments==2.18.0
 pyproject-hooks==1.1.0
     # via build
 pyright==1.1.364
+pytest==8.2.1
 python-dotenv==1.0.1
     # via pydantic-settings
 pyyaml==6.0.1
