--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,21 +43,21 @@ Repository = "https://github.com/vladhaidukkk/todo-cli"
 
 [project.optional-dependencies]
 dev = [
-    "build",
-    "twine",
-    "pytest",
-    "pytest-mock",
-    "faker",
-    "isort",
-    "black",
-    "docformatter",
-    "pyright",
-    "flake8",
-    "flake8-pyproject",
-    "autoflake",
-    "bandit",
-    "pre-commit",
-    "ipdb",
+    "build>=1.2.1,<2.0.0",
+    "twine>=5.1.0,<6.0.0",
+    "pytest>=8.2.2,<9.0.0",
+    "pytest-mock>=3.14.0,<4.0.0",
+    "faker>=25.8.0,<26.0.0",
+    "isort>=5.13.2,<6.0.0",
+    "black>=24.4.2,<25.0.0",
+    "docformatter>=1.7.5,<2.0.0",
+    "pyright>=1.1.366,<2.0.0",
+    "flake8>=7.0.0,<8.0.0",
+    "flake8-pyproject>=1.2.3,<2.0.0",
+    "autoflake>=2.3.1,<3.0.0",
+    "bandit>=1.7.8,<2.0.0",
+    "pre-commit>=3.7.1,<4.0.0",
+    "ipdb>=0.13.13,<0.14.0",
 ]
 
 [project.scripts]
