--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,9 @@
 repos:
   - repo: local
     hooks:
-      - id: isort
-        name: isort
-        entry: isort --check
-        language: system
-        types: [ python ]
-        stages: [ pre-commit ]
-
-      - id: black
-        name: black
-        entry: black --check
-        language: system
-        types: [ python ]
-        stages: [ pre-commit ]
-
-      - id: docformatter
-        name: docformatter
-        entry: docformatter --check
+      - id: ruff-formatter
+        name: ruff-formatter
+        entry: ruff format --check
         language: system
         types: [ python ]
         stages: [ pre-commit ]
@@ -29,16 +15,9 @@ repos:
         types: [ python ]
         stages: [ pre-commit ]
 
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [ python ]
-        stages: [ pre-commit ]
-
-      - id: autoflake
-        name: autoflake
-        entry: autoflake
+      - id: ruff-linter
+        name: ruff-linter
+        entry: ruff check
         language: system
         types: [ python ]
         stages: [ pre-commit ]
