--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "alembic>=1.13.1,<2.0.0",
     "pydantic>=2.7.1,<3.0.0",
     "pydantic-settings>=2.2.1,<3.0.0",
+    "tomli>=2.0.1,<3.0.0",
 ]
 
 [project.urls]
@@ -66,8 +67,7 @@ line-length = 88
 show-fixes = true
 
 [tool.ruff.lint]
-# TODO: add `isort` & downgrade my local Python version according to requirements
-select = ["F", "E", "C90", "D"]
+select = ["F", "E", "C90", "I", "D"]
 ignore = ["D1", "D203", "D213"]
 
 [tool.ruff.lint.per-file-ignores]
