--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pydantic==2.7.3
     # via pydantic-settings
 pydantic-core==2.18.4
     # via pydantic
-pydantic-settings==2.3.1
+pydantic-settings==2.3.2
 pygments==2.18.0
     # via rich
 python-dotenv==1.0.1
@@ -28,6 +28,7 @@ shellingham==1.5.4
     # via typer
 sqlalchemy==2.0.30
     # via alembic
+tomli==2.0.1
 typer==0.12.3
 typing-extensions==4.12.2
     # via
