--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ line-length = 88
 show-fixes = true
 
 [tool.ruff.lint]
-select = ["F", "E", "C90", "I", "D"]
+select = ["F", "E", "C90", "I", "D", "UP"]
 ignore = ["D1", "D203", "D213"]
 
 [tool.ruff.lint.per-file-ignores]
