--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,35 +8,33 @@ version = "0.0.1"
 description = "Manage your daily tasks directly from your terminal"
 readme = "README.md"
 license = { text = "MIT" }
-authors = [
-    { name = "Vlad Haiduk", email = "the.vladhaiduk@gmail.com" },
-]
+authors = [{ name = "Vlad Haiduk", email = "the.vladhaiduk@gmail.com" }]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
-    "Environment :: Console",
-    "Intended Audience :: Developers",
-    "Intended Audience :: End Users/Desktop",
-    "Intended Audience :: System Administrators",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Topic :: Software Development :: Libraries :: Python Modules",
-    "Topic :: Terminals",
-    "Topic :: Utilities",
+  "Development Status :: 2 - Pre-Alpha",
+  "Environment :: Console",
+  "Intended Audience :: Developers",
+  "Intended Audience :: End Users/Desktop",
+  "Intended Audience :: System Administrators",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Terminals",
+  "Topic :: Utilities",
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "typer>=0.12.3,<0.13.0",
-    "SQLAlchemy>=2.0.30,<3.0.0",
-    "alembic>=1.13.1,<2.0.0",
-    "pydantic>=2.7.1,<3.0.0",
-    "pydantic-settings>=2.2.1,<3.0.0",
-    "tomli>=2.0.1,<3.0.0",
+  "typer>=0.12.3,<0.13.0",
+  "SQLAlchemy>=2.0.30,<3.0.0",
+  "alembic>=1.13.1,<2.0.0",
+  "pydantic>=2.7.1,<3.0.0",
+  "pydantic-settings>=2.2.1,<3.0.0",
+  "tomli>=2.0.1,<3.0.0",
 ]
 
 [project.urls]
@@ -44,16 +42,16 @@ Repository = "https://github.com/vladhaidukkk/todo-cli"
 
 [project.optional-dependencies]
 dev = [
-    "build>=1.2.1,<2.0.0",
-    "twine>=5.1.0,<6.0.0",
-    "pytest>=8.2.2,<9.0.0",
-    "pytest-mock>=3.14.0,<4.0.0",
-    "faker>=25.8.0,<26.0.0",
-    "pyright>=1.1.366,<2.0.0",
-    "ruff>=0.4.8,<0.5.0",
-    "bandit>=1.7.8,<2.0.0",
-    "pre-commit>=3.7.1,<4.0.0",
-    "ipdb>=0.13.13,<0.14.0",
+  "build>=1.2.1,<2.0.0",
+  "twine>=5.1.0,<6.0.0",
+  "pytest>=8.2.2,<9.0.0",
+  "pytest-mock>=3.14.0,<4.0.0",
+  "faker>=25.8.0,<26.0.0",
+  "pyright>=1.1.366,<2.0.0",
+  "ruff>=0.4.8,<0.5.0",
+  "bandit>=1.7.8,<2.0.0",
+  "pre-commit>=3.7.1,<4.0.0",
+  "ipdb>=0.13.13,<0.14.0",
 ]
 
 [project.scripts]
