--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,7 +7,6 @@ asttokens==2.4.1
     # via stack-data
 backports-tarfile==1.2.0
     # via jaraco-context
-bandit==1.7.8
 build==1.2.1
 certifi==2024.6.2
     # via requests
@@ -32,7 +31,7 @@ exceptiongroup==1.2.1
 executing==2.0.1
     # via stack-data
 faker==25.8.0
-filelock==3.14.0
+filelock==3.15.0
     # via virtualenv
 identify==2.5.36
     # via pre-commit
@@ -84,8 +83,6 @@ packaging==24.1
     #   pytest
 parso==0.8.4
     # via jedi
-pbr==6.0.0
-    # via stevedore
 pexpect==4.9.0
     # via ipython
 pkginfo==1.11.1
@@ -101,7 +98,7 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pydantic==2.7.3
+pydantic==2.7.4
     # via pydantic-settings
 pydantic-core==2.18.4
     # via pydantic
@@ -113,7 +110,7 @@ pygments==2.18.0
     #   rich
 pyproject-hooks==1.1.0
     # via build
-pyright==1.1.366
+pyright==1.1.367
 pytest==8.2.2
     # via pytest-mock
 pytest-mock==3.14.0
@@ -122,9 +119,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
     # via pydantic-settings
 pyyaml==6.0.1
-    # via
-    #   bandit
-    #   pre-commit
+    # via pre-commit
 readme-renderer==43.0
     # via twine
 requests==2.32.3
@@ -137,7 +132,6 @@ rfc3986==2.0.0
     # via twine
 rich==13.7.1
     # via
-    #   bandit
     #   twine
     #   typer
 ruff==0.4.8
@@ -151,8 +145,6 @@ sqlalchemy==2.0.30
     # via alembic
 stack-data==0.6.3
     # via ipython
-stevedore==5.2.0
-    # via bandit
 tomli==2.0.1
     # via
     #   build
